legacy/additional_testing/gcc_crash_stats/results/gcc540/save_st/pr39084.c-5.4.0-2.out.txt
pr39084.c:11:8: error: redefinition of ‘struct color’
 struct color { int j; };  
        ^
pr39084.c:4:8: note: originally defined here
 struct color { int i; };  
        ^
